<resources>
  <string name="app_name">Clinic</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="navbarMenuHome">خانه</string>
  <string name="navbarMenuProductCatList">لیست دسته بندی ها</string>
  <string name="navbarMenuShoppingBasket">سبد خرید</string>
  <string name="navbarMenuSpecialOffer">پیشنهاد ویژه کلینیک</string>
  <string name="navbarMenuMostSoled">پرفروش ترین‌ها</string>
  <string name="navbarMenuMostSeen">پربازدیدترین‌ها</string>
  <string name="navbarMenuNewest">جدیدترین‌ها</string>
  <string name="navbarMenuSettings">تنظیمات</string>
  <string name="navbarMenuMap">نقشه</string>
  <string name="navbarMenuFrequentQuestions">سوالات متداول</string>
  <string name="navbarMenuAboutUs">درباره ما</string>
  <string name="navbarHeaderWelcome">خوش آمدید</string>
  <string name="special_offer_suggestion_text">پیشنهاد</string>
  <string name="special_offer_incredible_text">شگفت انگیز</string>
  <string name="seller_name">فروشنده :</string>
  <string name="gurantee_name">گارانتی :</string>
  <string name="product_number">تعداد :</string>
  <string name="main_price">قیمت کل</string>
  <string name="toman">تومان</string>
  <string name="incredible_discount_name">(-) تخفیف شگفت انگیز</string>
  <string name="final_price_name">قیمت نهایی</string>
  <string name="remove_product_name">حذف</string>
  <string name="your_shopping_basket">سبد خرید شما</string>
  <string name="sum_of_shop">جمع کل خرید</string>
  <string name="finilize_your_shop">خرید خود را نهایی کنید</string>
  <string name="your_shopping_basket_is_empty">سبد خرید شما خالی است!</string>
  <string name="alertDialogPositiveButton">بله</string>
  <string name="alertDialogNegetiveButtonText">خیر</string>
  <string name="removePorductAlertTitle">حذف سفارش</string>
  <string name="removeProductAlertMessage">آیا از حذف %1$s  اطمینان دارید؟</string>
  <string name="emptyBasketAlertTitle">خالی کردن سبد</string>
  <string name="emptyBasketAlertMessage">آیا مایل به حذف تمامی سفارشات از سبد خریدتان هستید؟</string>
  <string name="signin_enter">ورود</string>
  <string name="signin_dear_user">کاربر گرامی</string>
  <string name="singin_and_signup">ورود و ثبت نام</string>
  <string name="signin_comma">،</string>
  <string name="registerInDigishop">ثبت نام در کلینیک</string>
  <string name="userLoginEmailOrMobile">شماره موبایل یا ایمیل</string>
  <string name="firstName">نام</string>
  <string name="lastName">نام خانوادگی</string>
  <string name="userLoginPassword">کلمه عبور</string>
  <string name="userLoginForgotPassword">کلمه عبورم را فراموش کرده‌ام!</string>
  <string name="sign_up_in">ثبت نام در کلینیک</string>
  <string name="sign_in_clinic">ورود به کلینیک</string>
  <string name="signed_up_with_email_in_before">اگر قبلا با ایمیل ثبت‌نام کرده‌اید، نیاز به ثبت‌نام مجدد با شماره همراه ندارید</string>
  <string name="remembser_me">مرا به خاطر بسپار</string>
  <string name="sign_in_to_digishop">ورود به کلینیک</string>
  <string name="want_to_receive_digishop_magazine">مایل به دریافت خبرنامه کلینیک هستم</string>
  <string name="toolbar_signin">ورود</string>
  <string name="toolbar_signup">ثبت نام</string>
  <string name="might_like_following_products">احتمالا به غذاهای زیر علاقه‌مند باشید</string>
  <string name="color_count">%1$d  رنگ</string>
  <string name="color_title">رنگ</string>
  <string name="error_in_connection">خطا در برقراری ارتباط با سرور</string>
  <string name="hint_search_here">اینجا جستوجو کنید</string>
  <string name="splash_loading_text">بارگزاری محتوا</string>
  <string name="splash_chant">کلینیک؛ پزشک اختصاصی شما</string>
  <string name="splash_version">version: 1.0.0</string>
  <string name="main_choose_surva_title">نوع پرسش نامه خود را انتخاب کنید</string>
  <string name="main_choose_survay_text_detail">از گروه پرسشنامه های زیر، هرکدام که برای شرایط شما  مناسب است را انتخاب کنید.</string>
  <string name="toolbar_clinic_title">کلینیک</string>
  <string name="toolbar_dentistry_title">پرسشنامه دندانپزشکی</string>
  <string name="categories_choose_dentistry_survay">نوع پرسش نامه دندانپزشکی را انتخاب نمایید</string>
  <string name="toolbar_questions_title">پرسش ها</string>
  <string name="exit">خروج</string>
  <string name="exit_account"> خروج از حساب کاربری</string>
  <string name="are_u_sure_exit">آیا برای خروج اطمینان دارید؟</string>
  <string name="are_u_sure_exit_account">آیا برای خروج از حساب کاربریتان اطمینان دارید؟</string>
  <string name="yes">بله</string>
  <string name="cancel">لغو</string>
  <string name="sign_up_successful">ثبت نام با موفقیت انجام شد.</string>
  <string name="neccessary_fields">پر کردن این فیلد الزامی است.</string>
  <string name="sign_up_failed">ثبت نام ناموفق!</string>
  <string name="sign_in_faild">ورود ناموفق!</string>
  <string name="exit_user_account">خروج از حساب کاربری</string>
  <string name="question_no_answer">خیر، اینطور نیست</string>

</resources>
