<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/secondBackground"
  android:focusable="true"
  android:focusableInTouchMode="true"
  tools:context=".ui.fragments.signinsignup.SignUpFragment">

  <androidx.appcompat.widget.AppCompatCheckBox
    android:id="@+id/chkReceiveMagazine"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/inpSignUpUserPasswordContainer"
    android:layout_alignParentEnd="true"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="8dp"
    android:layoutDirection="rtl"
    android:text="@string/want_to_receive_digishop_magazine"
    android:textColor="@color/middleGray"
    android:theme="@style/greenCheckBoxStyle" />

  <androidx.appcompat.widget.AppCompatTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="16dp"
    android:gravity="center_horizontal"
    android:text="@string/signed_up_with_email_in_before"
    android:textColor="@color/middleGray" />

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/cvSignUp"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_alignParentBottom="true"
    android:imeOptions="actionSend|flagNoEnterAction">

    <LinearLayout
      android:id="@+id/llSingUpBtnContainer"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:layout_gravity="center_horizontal"
      android:background="@color/colorAccent"
      android:gravity="center"
      android:orientation="horizontal"
      android:padding="8dp">

      <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/signUpLoading"
        android:visibility="gone"
        style="@style/SpinKitView.Large.FoldingCube"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:padding="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:SpinKit_Color="@color/pureWhite" />

      <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgSignUpArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:srcCompat="@drawable/ic_navigation_next_white" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDoneSignUpInDigishop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_in"
        android:textColor="@color/pureWhite"
        android:textSize="19sp" />
    </LinearLayout>
  </com.google.android.material.card.MaterialCardView>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/inpSignUpFirstName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="64dp"
    android:hint="@string/firstName"
    android:layoutDirection="rtl"
    app:errorEnabled="true"
    app:hintTextAppearance="@style/greenTextInputLayoutStyle">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/edtSignUpFirstName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:drawableStart="@drawable/ic_edit_pen"
      android:drawablePadding="8dp"
      android:inputType="text"
      android:paddingTop="16dp"
      android:textColor="@color/colorPrimaryDark"
      android:textDirection="rtl"
      android:textSize="15sp"
      android:theme="@style/greenEditTextStyle" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/inpSignUpLastName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/inpSignUpFirstName"
    android:hint="@string/lastName"
    android:layoutDirection="rtl"
    app:errorEnabled="true"
    app:hintTextAppearance="@style/greenTextInputLayoutStyle">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/edtSignUpLastName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:drawableStart="@drawable/ic_edit_pen"
      android:drawablePadding="8dp"
      android:inputType="text"
      android:paddingTop="16dp"
      android:textColor="@color/colorPrimaryDark"
      android:textDirection="rtl"
      android:textSize="15sp"
      android:theme="@style/greenEditTextStyle" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/inpSignUpUserEmailContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/inpSignUpLastName"
    android:hint="@string/userLoginEmailOrMobile"
    android:layoutDirection="rtl"
    app:errorEnabled="true"
    app:hintTextAppearance="@style/greenTextInputLayoutStyle">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/edtSignUpUserEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:drawablePadding="8dp"
      android:drawableStart="@drawable/ic_email_gray_24dp"
      android:inputType="textEmailAddress"
      android:paddingTop="16dp"
      android:textColor="@color/colorPrimaryDark"
      android:textDirection="rtl"
      android:textSize="15sp"
      android:theme="@style/greenEditTextStyle" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/inpSignUpUserPasswordContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/inpSignUpUserEmailContainer"
    android:hint="@string/userLoginPassword"
    android:layoutDirection="rtl"
    app:errorEnabled="true"
    app:hintTextAppearance="@style/greenTextInputLayoutStyle"
    app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/edtSignUpUserPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:drawablePadding="8dp"
      android:drawableStart="@drawable/ic_lock_gray_24dp"
      android:textColor="@color/colorPrimaryDark"
      android:textDirection="rtl"
      android:textSize="15sp"
      android:theme="@style/greenEditTextStyle" />
  </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>